gitops/platform/dev/network-policies/allow-falco.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-falco
  namespace: hardened

spec:

  podSelector: {}

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: falco

      ports:

        - protocol: TCP
          port: 2801
