gitops/platform/dev/network-policies/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-monitoring
  namespace: hardened

spec:

  podSelector: {}

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

      ports:

        - protocol: TCP
          port: 80

        - protocol: TCP
          port: 8080

        - protocol: TCP
          port: 9090

        - protocol: TCP
          port: 9100
